# opspilot-newrelic

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  reset-venv.bat  start.bat  start.sh
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  errors.py  logging_config.py  main.py  security.py
backend/app/db/: models.py  session.py
backend/app/routes/: accounts.py  charts.py  chat.py  credentials.py  entities.py  health.py  investigations.py  nrql.py
backend/app/schemas/: __init__.py  chat.py  common.py  credentials.py  entities.py  nrql.py
backend/app/services/: agent_service.py  cache_service.py  credential_service.py  entity_service.py  llm_service.py  mcp_client.py  nerdgraph.py  newrelic_client.py  nrql_builder.py  visualization_engine.py
backend/app/tests/: test_agent_service_selection.py  test_nrql_builder.py  test_security.py  test_visualization_engine.py
backend/app/tools/: chart_tools.py  investigation_tools.py  newrelic_tools.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/charts/: universal-chart.tsx
frontend/components/: account-selector.tsx  apm-card.tsx  apm-detail.tsx  apm-list.tsx  app-shell.tsx  auth-aware-actions.tsx  auth-gate.tsx  backend-wakeup.tsx  chart-card.tsx  chart-toolbar.tsx  chat-apm-selector.tsx  chat-message.tsx  chat-panel.tsx  connect-gate.tsx  (+19 more)
scripts/: check_no_secrets.py
(+23 files in other folders)
