[project]
name = "opspilot-newrelic-backend"
version = "0.1.0"
description = "Secure FastAPI backend for OpsPilot for New Relic"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.0",
  "httpx==0.28.1",
  "cryptography==44.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 140
src = ["app"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
